fixed window scrollbar issue

--- a/sidebar/panel.css
+++ b/sidebar/panel.css
@@ -59,7 +59,7 @@ main .selected-details {
   margin-top: 1em;
   position:  relative;
   display:  block;
-  width: 100%;
+  width: 98%;
   height: 2.0em;
 }
 
@@ -83,7 +83,7 @@ footer {
   padding: 0.25em;
   padding-bottom: 1em;
   position: absolute;
-  width: 100%;
+  width: 98%;
 }
 
 footer .info {
